jellyfin_stack/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
    project: media-server
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        project: media-server
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: project
                operator: In
                values:
                - media-server
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data
        ports:
        - containerPort: 8096
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
