jellyfin_stack/jellyfin/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
  - name: jellyfin-https
    protocol: TCP
    port: 443 # external port for HTTPS access
    targetPort: 8920 # internal port Jellyfin listens on for HTTPS
  - name: jellyfin-http
    protocol: TCP
    port: 80
    targetPort: 8096
  - name: jellyfin
    protocol: UDP
    port: 7359
    targetPort: 7359
